syntax = "proto3";

option java_multiple_files = true;

package org.hypertrace.entity.query.service.v1;

import "org/hypertrace/entity/query/service/v1/request.proto";
import "org/hypertrace/entity/query/service/v1/response.proto";
import "org/hypertrace/entity/query/service/v1/value.proto";

message EntityQueryRequest {
  string entityType = 2;
  Filter filter = 3;
  repeated Expression selection = 4;
  repeated OrderByExpression orderBy = 7;
  int32 limit = 5;
  int32 offset = 6;
  repeated Expression groupBy = 8;
}

message EntityUpdateRequest {
  string entityType = 1;
  repeated string entityIds = 2;
  UpdateOperation operation = 3;
  // attribute selection of updated entities
  repeated Expression selection = 4;
}

message BulkEntityUpdateRequest {
  string entityType = 1;
  // map of entity id, update operations corresponding to this entity id
  map<string, EntityUpdateInfo> entities = 2;
  message EntityUpdateInfo {
    repeated UpdateOperation updateOperation = 1;
  }
}

message BulkUpdateAllMatchingFilterRequest {
  string entity_type = 1;
  repeated Update updates = 2;
}

message Update {
  Filter filter = 1;
  repeated AttributeUpdateOperation operations = 2;
}

message TotalEntitiesRequest {
  string entityType = 1;
  Filter filter = 2;
}

message UpdateOperation {
  oneof operation {
    SetAttribute setAttribute = 1;
    // more update operations in the future
  }
}

message SetAttribute {
  ColumnIdentifier attribute = 1;
  LiteralConstant value = 2;
}

message AttributeUpdateOperation {
  ColumnIdentifier attribute = 1;
  AttributeUpdateOperator operator = 2;
  LiteralConstant value = 3;

  enum AttributeUpdateOperator {
    ATTRIBUTE_UPDATE_OPERATION_UNSPECIFIED = 0;
    ATTRIBUTE_UPDATE_OPERATOR_SET = 1;
    ATTRIBUTE_UPDATE_OPERATOR_UNSET = 2;
    ATTRIBUTE_UPDATE_OPERATOR_ADD_TO_LIST_IF_ABSENT = 3;
    ATTRIBUTE_UPDATE_OPERATOR_REMOVE_FROM_LIST = 4;
  }
}

message BulkEntityArrayAttributeUpdateRequest {
  string entity_type = 1;
  repeated string entity_ids = 2;
  ColumnIdentifier attribute = 3;
  Operation operation = 4;
  repeated LiteralConstant values = 5;

  enum Operation {
    OPERATION_UNSPECIFIED = 0;
    OPERATION_ADD = 1;
    OPERATION_REMOVE = 2;
    OPERATION_SET = 3;
  }
}

message BulkEntityArrayAttributeUpdateResponse {
}
